fix font on mobile safari

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 @font-face {
   font-family: 'Arial Narrow';
   src: url('/font/Arial-Narrow-Bold.ttf');
+  font-weight: bold;
 }
 
 body {
